fdo#77219 Image property Z-index [behindDoc] not preserved after RT

Problem description:
For the images who has the "Text wrapping" property set as Behind Text
 is not preserved after saving the file in DOCX format using LO.

Change-Id: Ic8555103909c0f1ed1cb58fba4dc2ef2f84cc9dd